--- a/src/DesiderataTests/DesiderataTests/DesiderataTests.vbproj
+++ b/src/DesiderataTests/DesiderataTests/DesiderataTests.vbproj
@@ -104,6 +104,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="UnitTest1.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
