--- a/src/desiderata/desiderata/desiderata.vbproj
+++ b/src/desiderata/desiderata/desiderata.vbproj
@@ -143,6 +143,8 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="db\00.initialise.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
